# app/model/api.go
@@ -9,11 +9,6 @@ func (d *Dao) CreateApi(api *entity.Api) error {
 	return err
 }
 
-func (d *Dao) DeleteApi(ids []int) error {
-	err := SystemDB().Delete(entity.Api{}, ids).Error
-	return err
-}
-
 func (d *Dao) AllApis() (data []entity.Api, err error) {
 	err = SystemDB().Find(&data).Error
 	return
