# app/model/dict_data.go
@@ -1,0 +1,8 @@
+package model
+
+import "go-deck/app/model/entity"
+
+func (d *Dao) CreateDictData(data *entity.DictData) error {
+	err := SystemDB().Create(data).Error
+	return err
+}
